name:                gl-tutorial
version:             0.1.0.0
author:              Chris Mahon
maintainer:          cnmahon@gmail.com
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10
data-files:          fragmentShader.glsl
                     vertexShader.glsl
                     haskell.png
data-dir:            data

executable gl-tutorial
  main-is:            Main.hs
  build-depends:      base                  >= 4.7 && <4.8,
                      base-unicode-symbols  == 0.2.2.4,
                      transformers          == 0.4.3.0,
                      vector                == 0.10.12.2,
                      text                  == 1.2.0.3,
                      gl                    == 0.7.2.4,
                      GLFW-b                == 1.4.7.1,
                      linear                == 1.18.0.1,
                      distributive          == 0.4.4,
                      lens                  == 4.6.0.1,
                      JuicyPixels           == 3.2.3
  default-language:   Haskell2010 